--- a/peer.html
+++ b/peer.html
@@ -4,22 +4,18 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>Peer-to-Peer Cue System --- Sender</title>
+        <title>Peer-to-Peer Cue System --- Reciever</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Peer-to-Peer Cue System --- Sender</h1>
-
-        <table class="control">
+        <table class="display">
             <tr>
                 <td class="title">Status:</td>
                 <td class="title">Messages:</td>
             </tr>
             <tr>
                 <td>
-                    <span style="font-weight: bold">ID: </span>
-                    <input type="text" id="receiver-id" title="Input the ID from receive.html">
-                    <button id="connect-button">Connect</button>
+                    <div id="receiver-id" style="font-weight: bold;" title="Copy this ID to the input on send.html.">ID:</div>
                 </td>
                 <td>
                     <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
@@ -32,20 +28,12 @@
                 <td><div class="message" id="message"></div></td>
             </tr>
             <tr>
-                <td>
-                    <button type="button" class="control-button" id="resetButton">Reset</button>
-                </td>
-                <td>
-                    <button type="button" class="control-button" id="goButton">Go</button>
-                </td>
+                <td class="display-box standby" id="standby"><h2>Standby</h2></td>
+                <td class="display-box hidden" id="go"><h2>Go</h2></td>
             </tr>
             <tr>
-                <td>
-                    <button type="button" class="control-button" id="fadeButton">Fade</button>
-                </td>
-                <td>
-                    <button type="button" class="control-button" id="offButton">Off</button>
-                </td>
+                <td class="display-box hidden" id="fade"><h2>Fade</h2></td>
+                <td class="display-box hidden" id="off"><h2>All Off</h2></td>
             </tr>
         </table>
 
@@ -54,20 +42,19 @@
             (function () {
 
                 var lastPeerId = null;
-                var peer = null; // own peer object
+                var peer = null; // Own peer object
+                var peerId = null;
                 var conn = null;
-                var recvIdInput = document.getElementById("receiver-id");
+                var recvId = document.getElementById("receiver-id");
                 var status = document.getElementById("status");
                 var message = document.getElementById("message");
-                var goButton = document.getElementById("goButton");
-                var resetButton = document.getElementById("resetButton");
-                var fadeButton = document.getElementById("fadeButton");
-                var offButton = document.getElementById("offButton");
+                var standbyBox = document.getElementById("standby");
+                var goBox = document.getElementById("go");
+                var fadeBox = document.getElementById("fade");
+                var offBox = document.getElementById("off");
                 var sendMessageBox = document.getElementById("sendMessageBox");
                 var sendButton = document.getElementById("sendButton");
                 var clearMsgsButton = document.getElementById("clearMsgsButton");
-                var connectButton = document.getElementById("connect-button");
-                var cueString = "<span class=\"cueMsg\">Cue: </span>";
 
                 /**
                  * Create the Peer object for our end of the connection.
@@ -75,7 +62,7 @@
                  * Sets up callbacks that handle any events related to our
                  * peer object.
                  */
-                function initialize() {
+                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(null, {
                         debug: 2
@@ -91,13 +78,23 @@
                         }
 
                         console.log('ID: ' + peer.id);
+                        recvId.innerHTML = "ID: " + peer.id;
+                        status.innerHTML = "Awaiting connection...";
                     });
                     peer.on('connection', function (c) {
-                        // Disallow incoming connections
-                        c.on('open', function() {
-                            c.send("Sender does not accept incoming connections");
-                            setTimeout(function() { c.close(); }, 500);
-                        });
+                        // Allow only a single connection
+                        if (conn && conn.open) {
+                            c.on('open', function() {
+                                c.send("Already connected to another client");
+                                setTimeout(function() { c.close(); }, 500);
+                            });
+                            return;
+                        }
+
+                        conn = c;
+                        console.log("Connected to: " + conn.peer);
+                        status.innerHTML = "Connected";
+                        ready();
                     });
                     peer.on('disconnected', function () {
                         status.innerHTML = "Connection lost. Please reconnect";
@@ -120,83 +117,72 @@
                 };
 
                 /**
-                 * Create the connection between the two Peers.
-                 *
-                 * Sets up callbacks that handle any events related to the
-                 * connection and data received on it.
+                 * Triggered once a connection has been achieved.
+                 * Defines callbacks to handle incoming data and connection events.
                  */
-                function join() {
-                    // Close old connection
-                    if (conn) {
-                        conn.close();
-                    }
-
-                    // Create connection to destination peer specified in the input field
-                    conn = peer.connect(recvIdInput.value, {
-                        reliable: true
-                    });
-
-                    conn.on('open', function () {
-                        status.innerHTML = "Connected to: " + conn.peer;
-                        console.log("Connected to: " + conn.peer);
-
-                        // Check URL params for comamnds that should be sent immediately
-                        var command = getUrlParam("command");
-                        if (command)
-                            conn.send(command);
-                    });
-                    // Handle incoming data (messages only since this is the signal sender)
+                function ready() {
                     conn.on('data', function (data) {
-                        addMessage("<span class=\"peerMsg\">Peer:</span> " + data);
+                        console.log("Data recieved");
+                        var cueString = "<span class=\"cueMsg\">Cue: </span>";
+                        switch (data) {
+                            case 'Go':
+                                go();
+                                addMessage(cueString + data);
+                                break;
+                            case 'Fade':
+                                fade();
+                                addMessage(cueString + data);
+                                break;
+                            case 'Off':
+                                off();
+                                addMessage(cueString + data);
+                                break;
+                            case 'Reset':
+                                reset();
+                                addMessage(cueString + data);
+                                break;
+                            default:
+                                addMessage("<span class=\"peerMsg\">Peer: </span>" + data);
+                                break;
+                        };
                     });
                     conn.on('close', function () {
-                        status.innerHTML = "Connection closed";
+                        status.innerHTML = "Connection reset<br>Awaiting connection...";
+                        conn = null;
                     });
-                };
-
-                /**
-                 * Get first "GET style" parameter from href.
-                 * This enables delivering an initial command upon page load.
-                 *
-                 * Would have been easier to use location.hash.
-                 */
-                function getUrlParam(name) {
-                    name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
-                    var regexS = "[\\?&]" + name + "=([^&#]*)";
-                    var regex = new RegExp(regexS);
-                    var results = regex.exec(window.location.href);
-                    if (results == null)
-                        return null;
-                    else
-                        return results[1];
-                };
-
-                /**
-                 * Send a signal via the peer connection and add it to the log.
-                 * This will only occur if the connection is still alive.
-                 */
-                 function signal(sigName) {
-                    if (conn && conn.open) {
-                        conn.send(sigName);
-                        console.log(sigName + " signal sent");
-                        addMessage(cueString + sigName);
-                    } else {
-                        console.log('Connection is closed');
-                    }
                 }
 
-                goButton.addEventListener('click', function () {
-                    signal("Go");
-                });
-                resetButton.addEventListener('click', function () {
-                    signal("Reset");
-                });
-                fadeButton.addEventListener('click', function () {
-                    signal("Fade");
-                });
-                offButton.addEventListener('click', function () {
-                    signal("Off");
-                });
+                function go() {
+                    standbyBox.className = "display-box hidden";
+                    goBox.className = "display-box go";
+                    fadeBox.className = "display-box hidden";
+                    offBox.className = "display-box hidden";
+                    return;
+                };
+
+                function fade() {
+                    standbyBox.className = "display-box hidden";
+                    goBox.className = "display-box hidden";
+                    fadeBox.className = "display-box fade";
+                    offBox.className = "display-box hidden";
+                    return;
+                };
+
+                function off() {
+                    standbyBox.className = "display-box hidden";
+                    goBox.className = "display-box hidden";
+                    fadeBox.className = "display-box hidden";
+                    offBox.className = "display-box off";
+                    return;
+                }
+
+                function reset() {
+                    standbyBox.className = "display-box standby";
+                    goBox.className = "display-box hidden";
+                    fadeBox.className = "display-box hidden";
+                    offBox.className = "display-box hidden";
+                    return;
+                };
 
                 function addMessage(msg) {
                     var now = new Date();
@@ -216,12 +202,12 @@
                     };
 
                     message.innerHTML = "<br><span class=\"msg-time\">" + h + ":" + m + ":" + s + "</span>  -  " + msg + message.innerHTML;
-                };
+                }
 
                 function clearMessages() {
                     message.innerHTML = "";
                     addMessage("Msgs cleared");
-                };
+                }
 
                 // Listen for enter in message box
                 sendMessageBox.addEventListener('keypress', function (e) {
@@ -236,8 +222,8 @@
                         var msg = sendMessageBox.value;
                         sendMessageBox.value = "";
                         conn.send(msg);
-                        console.log("Sent: " + msg);
-                        addMessage("<span class=\"selfMsg\">Self: </span> " + msg);
+                        console.log("Sent: " + msg)
+                        addMessage("<span class=\"selfMsg\">Self: </span>" + msg);
                     } else {
                         console.log('Connection is closed');
                     }
@@ -245,10 +231,7 @@
 
                 // Clear messages box
                 clearMsgsButton.addEventListener('click', clearMessages);
-                // Start peer connection on click
-                connectButton.addEventListener('click', join);
 
-                // Since all our callbacks are setup, start the process of obtaining an ID
                 initialize();
             })();
         </script>
