--- a/peer.html
+++ b/peer.html
@@ -112,7 +112,7 @@
                     });
                     peer.on('error', function (err) {
                         console.log(err);
-                        alert('' + err);
+                        //alert('' + err);
                     });
                 };
 
