--- a/peer.html
+++ b/peer.html
@@ -64,7 +64,7 @@
                  */
                  function initialize() {
                     // Create own peer object with connection to shared PeerJS server
-                    peer = new Peer(null, {
+                    peer = new Peer("ykmtk-12345-67890", {
                         debug: 2
                     });
 
