--- a/otaClient.html
+++ b/otaClient.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>Peer-to-Peer Cue System --- Sender</title>
+        <title>yikamatik peer</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Peer-to-Peer Cue System --- Sender</h1>
+        <h1>YIKAMATİK OTA RTC TEST</h1>
 
         <table class="control">
             <tr>
@@ -17,13 +17,13 @@
             </tr>
             <tr>
                 <td>
-                    <span style="font-weight: bold">ID: </span>
+                    <span style="font-weight: bold">PERON ID: </span>
                     <input type="text" id="receiver-id" title="Input the ID from receive.html" value="ykmtk-12345-67890">
-                    <button id="connect-button">Connect</button>
+                    <button id="connect-button">BAĞLAN</button>
                 </td>
                 <td>
                     <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
-                    <button type="button" id="sendButton">Send</button>
+                    <button type="button" id="sendButton">GÖNDER</button>
                     <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
                 </td>
             </tr>
