--- a/peer.html
+++ b/peer.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>Peer-to-Peer Cue System --- Reciever</title>
+        <title>YIKAMATİK OTA SERVER</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -36,7 +36,7 @@
                 <td class="display-box hidden" id="off"><h2>All Off</h2></td>
             </tr>
         </table>
-
+<a href="./otaClient.html">REFRESH</a>
         <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
