--- a/peer.html
+++ b/peer.html
@@ -36,7 +36,7 @@
                 <td class="display-box hidden" id="off"><h2>All Off</h2></td>
             </tr>
         </table>
-<a href="./otaClient.html">REFRESH</a>
+<a href="./peer.html">REFRESH</a>
         <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
