--- a/peer.html
+++ b/peer.html
@@ -7,7 +7,7 @@
         <title>YIKAMATİK OTA SERVER</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color:#000; color:#fff">
         <table class="display">
             <tr>
                 <td class="title">Status:</td>
