--- a/peer.html
+++ b/peer.html
@@ -4,10 +4,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>YIKAMATİK OTA SERVER</title>
+        <title>YIKAMATİK OTA ADAPTER</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:#000; color:#fff">
+
+        <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
                 <div id="status" class="status"></div>
                 <div class="message" id="message"></div>
         
