--- a/peer.html
+++ b/peer.html
@@ -10,6 +10,7 @@
     <body style="background-color:#000; color:#fff">
 
         <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
+        <div id="recvId" class="status"></div>
                 <div id="status" class="status"></div>
                 <div class="message" id="message"></div>
         
