--- a/peer.html
+++ b/peer.html
@@ -8,12 +8,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:#000; color:#fff">
-
+<div style="display:block;">
         <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
         <div id="recvId" class="status"></div>
                 <div id="status" class="status"></div>
                 <div class="message" id="message"></div>
-        
+</div>
+<hr>        
 <a href="./peer.html">REFRESH</a>
         <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
         <script type="text/javascript">
