--- a/peer.html
+++ b/peer.html
@@ -1,12 +1,15 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>YIKAMATİK OTA ADAPTER</title>
         <link rel="stylesheet" href="style.css">
-    </head>
+<style>
+    html,body{ color:#fff;}
+</style> 
+  
+  </head>
     <body style="background-color:#000; color:#fff">
 <div style="display:block;">
         <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
