--- a/peer.html
+++ b/peer.html
@@ -12,9 +12,9 @@
     <body style="background-color:#000; color:#fff">
 <div style="display:block;">
         <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
-        <div id="recvId" class="status"></div>
-                <div id="status" class="status"></div>
-                <div class="message" id="message"></div>
+        <div id="recvId" class="status">Device ID</div>
+                <div id="status" class="status">Status</div>
+                <div class="message" id="message">Message</div>
 </div>
 <hr>        
 <a href="./peer.html">REFRESH</a>
