--- a/peer.html
+++ b/peer.html
@@ -44,6 +44,7 @@
                  * peer object.
                  */
                  function initialize() {
+                   alert("initialize");
                     // Create own peer object with connection to shared PeerJS server
                     peer = new Peer(devID, {
                         debug: 2
