--- a/peer.html
+++ b/peer.html
@@ -12,7 +12,7 @@
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
         <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
-        <div id="recvId" class="status">Device ID</div>
+        <div id="receiver-id" class="status">Device ID</div>
                 <div id="status" class="status">Status</div>
                 <div class="message" id="message">Message</div>
 </div>
@@ -46,13 +46,13 @@
                  function initialize() {
                    
                     // Create own peer object with connection to shared PeerJS server
-                    peer = new Peer("ykmtk-"+devID, {
+                    peer = new Peer("ykmtk-p-"+devID, {
                         debug: 2
                     });
 
                     peer.on('open', function (id) {
                         // Workaround for peer.reconnect deleting previous id
-                        alert(id);
+                       
                       if (peer.id === null) {
                             console.log('Received null id from peer open');
                             peer.id = lastPeerId;
