--- a/peer.html
+++ b/peer.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>YIKAMATİK OTA ADAPTER</title>
 <style>
-    html,body{ color:#fff;}
+    html,body{ color:#fff;font-family:tahoma}
 </style> 
   
   </head>
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
-        <div><h1>YIKAMATİK OTA ADAPTER</h1></div>
+        <div><h2>YIKAMATIK OTA ADAPTER</h2><a href="./peer.html">REFRESH</a></div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="status" class="status">Status</div>
                 <div class="message" id="message">Message</div>
 </div>
 <hr>        
-<a href="./peer.html">REFRESH</a>
+
         <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
         <script type="text/javascript">
 
