--- a/peer.html
+++ b/peer.html
@@ -11,7 +11,7 @@
   </head>
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
-        <div><h2>YIKAMATIK OTA ADAPTER</h2><a href="./peer.html">REFRESH</a></div>
+        <div><h2>YIKAMATIK OTA ADAPTER</h2><a style="color:#f99;padding:5px;" href="./peer.html">REFRESH</a></div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="status" class="status">Status</div>
                 <div class="message" id="message">Message</div>
