--- a/peer.html
+++ b/peer.html
@@ -12,8 +12,8 @@
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
         <div><h2>YIKAMATIK OTA ADAPTER</h2>
-          <a style="color:#f99;padding:5px;display:inline;" href="./peer.html">REFRESH</a>
-          <a style="color:#f99;padding:5px;display:inline;" href="./peer.html">X</a>
+          <a style="color:#5f5;padding:5px;display:inline;text-decoration:none;" href="./peer.html">REFRESH</a>
+          <a style="color:#f55;padding:5px;display:inline;text-decoration:none;" href="./peer.html">X</a>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="status" class="status">Status</div>
