--- a/peer.html
+++ b/peer.html
@@ -13,7 +13,7 @@
 <div id="main" style="display:block;">
         <div><h2 style="display:inline-block;">YIKAMATIK OTA ADAPTER</h2>
           <a style="color:#5f5;padding:5px;display:inline-block;text-decoration:none;" href="./peer.html">REFRESH</a>
-          <a style="color:#f55;padding:5px;display:inline-block;text-decoration:none;" href="./peer.html">✖</a>
+          <a style="color:#f55;padding:5px;display:inline-block;text-decoration:none; position:absolute; right:-20px; font-size:25px;" href="./peer.html">✖</a>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="status" class="status">Status</div>
