--- a/peer.html
+++ b/peer.html
@@ -12,7 +12,7 @@
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
         <div><h2 style="display:inline-block;">YIKAMATIK OTA ADAPTER</h2>
-          <a style="color:#5f5;padding:5px;display:inline-block;text-decoration:none; font-size:30px" href="./peer.html">⟳</a>
+          <a style="color:#5f5;padding:5px;display:inline-block;text-decoration:none; font-size:30px; position:absolute; right:20px" href="./peer.html">⟳</a>
           <a onclick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#f55;padding:5px;display:inline-block;text-decoration:none; position:absolute; right:20px; font-size:25px;" href="">✖</a>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
