--- a/peer.html
+++ b/peer.html
@@ -6,6 +6,7 @@
         <title>YIKAMATİK OTA ADAPTER</title>
 <style>
     html,body{ color:#fff;font-family:tahoma}
+  hr{ border-top:1px dotted #eee }
 </style> 
   
   </head>
