--- a/peer.html
+++ b/peer.html
@@ -7,6 +7,7 @@
 <style>
     html,body{ color:#fff;font-family:tahoma}
   hr{ border-top:1px dotted #eee !important;}
+  h2{ margin:5px;}
 </style> 
   
   </head>
