--- a/peer.html
+++ b/peer.html
@@ -6,7 +6,7 @@
         <title>YIKAMATİK OTA ADAPTER</title>
 <style>
     html,body{ color:#fff;font-family:tahoma}
-  hr{ border-bottom:1px dotted #eee !important; background-color:none;}
+  hr{ border-bottom:1px dotted #eee !important;border-top:0px none !important; background-color:none;}
   h2{ margin:5px;}
 </style> 
   
