--- a/peer.html
+++ b/peer.html
@@ -114,7 +114,8 @@
                 function ready() {
                     conn.on('data', function (data) {
                         console.log("Data recieved");
-            window.ReactNativeWebView.postMessage(data );
+            //window.ReactNativeWebView.postMessage(data );
+                      message.innerHTML=data;
                     });
                     conn.on('close', function () {
                         status.innerHTML = "Connection reset<br>Awaiting connection...";
