--- a/peer.html
+++ b/peer.html
@@ -18,7 +18,7 @@
           <a onclick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#f55;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:3px; font-size:30px;" href="">✖</a>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
-                <div id="status" class="status">Status</div>
+                <div id="stat" class="status">Not Connected</div>
                 <div class="message" id="message">Message</div>
 </div>
 <hr>        
@@ -26,7 +26,7 @@
         <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
         <script type="text/javascript">
 
-(()=>{
+
 
 
 
@@ -37,7 +37,7 @@
                 var peerId = null;
                 var conn = null;
                 var recvId = document.getElementById("receiver-id");
-                var status = document.getElementById("status");
+                var status = document.getElementById("stat");
                 var message = document.getElementById("message");
                 var standbyBox = document.getElementById("standby");
                 var goBox = document.getElementById("go");
@@ -128,7 +128,7 @@
                     });
                 }
 
-});          
+      
 
                 //initialize();
 
