--- a/peer.html
+++ b/peer.html
@@ -86,11 +86,11 @@
 
                         conn = c;
                         console.log("Connected to: " + conn.peer);
-                        status.innerHTML = "Connected";
+                        stat.innerHTML = "Connected";
                         ready();
                     });
                     peer.on('disconnected', function () {
-                        status.innerHTML = "Connection lost. Please reconnect";
+                        stat.innerHTML = "Connection lost. Please reconnect";
                         console.log('Connection lost. Please reconnect');
 
                         // Workaround for peer.reconnect deleting previous id
@@ -101,7 +101,7 @@
                     peer.on('close', function() {
                         conn.close();
                         conn = null;
-                        status.innerHTML = "Connection destroyed. Please refresh";
+                        stat.innerHTML = "Connection destroyed. Please refresh";
                         console.log('Connection destroyed');
                         peer.destroy();
                     });
@@ -123,7 +123,7 @@
                       message.innerHTML=data;
                     });
                     conn.on('close', function () {
-                        status.innerHTML = "Connection reset<br>Awaiting connection...";
+                        stat.innerHTML = "Connection reset<br>Awaiting connection...";
                         conn = null;
                     });
                 }
