--- a/peer.html
+++ b/peer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>YIKAMATİK OTA ADAPTER</title>
+        <title>YIKAMATİK</title>
 <style>
     html,body{ color:#fff;font-family:tahoma}
   hr{ border-bottom:1px dotted #888 !important;border-top:0px none !important; background-color:none;}
@@ -13,7 +13,7 @@
   </head>
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
-        <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; color:#999"><h2 style="display:inline-block;">YIKAMATIK OTA ADAPTER</h2>
+        <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; color:#999"><h2 style="display:inline-block;">YIKAMATIK</h2>
           <a style="color:#5f5;padding:1px;display:inline-block;text-decoration:none; font-size:35px; position:absolute; right:60px;font-weight:bold;top:0px;" href="./peer.html">⟳</a>
           <a onclick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#f55;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:3px; font-size:30px;" href="">✖</a>
         </div>
@@ -109,6 +109,7 @@
                         peer.destroy();
                     });
                     peer.on('error', function (err) {
+                      
                         console.log(err);
                         peer.destroy();
                       location.reload();
