--- a/peer.html
+++ b/peer.html
@@ -15,7 +15,7 @@
 <div id="main" style="display:block;">
         <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; color:#999"><h2 style="display:inline-block;">YIKAMATIK</h2>
           <a style="color:#5f5;padding:1px;display:inline-block;text-decoration:none; font-size:35px; position:absolute; right:60px;font-weight:bold;top:-3px; margin:0 !important;" href="./peer.html">⟳</a>
-          <span onclick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#f00 !important;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:10px; font-size:25px; margin:0;" href="">✖</span>
+          <span onclick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#f00 !important;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:10px; font-size:25px; margin:0;" >✖</span>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="stat" class="status" style="background-color:#f00; color:#fff;">Not Connected</div>
