--- a/peer.html
+++ b/peer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>YIKAMATİK</title>
 <style>
-    html,body{ color:#fff;font-family:tahoma}
+    html,body{ color:#fff;font-family:Arial}
   hr{ border-bottom:1px dotted #888 !important;border-top:0px none !important; background-color:none;}
   h2{ margin:5px;}
 </style> 
@@ -15,7 +15,7 @@
 <div id="main" style="display:block;">
         <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; "><h2 style="display:inline-block;color:#999;">YIKAMATIK</h2>
           <a style="color:#5f5;padding:1px;display:inline-block;text-decoration:none; font-size:35px; position:absolute; right:60px;font-weight:bold;top:-3px; margin:0 !important;" href="./peer.html">⟳</a>
-          <span onClick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#Ff0000;" >✖a</span>
+          <span onClick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#Ff0000;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:10px; font-size:25px; margin:0;" >✖</span>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="stat" class="status" style="background-color:#f00; color:#fff;">Not Connected</div>
