--- a/peer.html
+++ b/peer.html
@@ -103,7 +103,6 @@
 
                       clog('peer disconnected.10sec to reload...');
                       setTimeout(() => {
-                        conn.send("OK");
                         location.reload();
                       }, 10000);
 
@@ -134,7 +133,7 @@
                 function ready() {
                     conn.on('data', function (data) {
                         clog("Data recieved");
-                      if(data==="restartConnection")  {location.reload();}
+                      if(data==="restartConnection")  {conn.send("OK"); location.reload();}
                       
             //window.ReactNativeWebView.postMessage(data );
                       
