--- a/peer.html
+++ b/peer.html
@@ -132,7 +132,7 @@
                  */
                 function ready() {
                     conn.on('data', function (data) {
-                        clog("Data recieved:"+data.length);
+                        clog("Data recieved:"+data.byteLength );
                       if(data==="restartConnection")  {conn.send("OK"); location.reload();}
                       if(data==="ping")  {conn.send("pong"); }
             //window.ReactNativeWebView.postMessage(data );
