--- a/peer.html
+++ b/peer.html
@@ -135,6 +135,8 @@
                  */
                 function ready() {
                     conn.on('data', function (data) {
+                      
+                      clog(typeof(data));
                       if(data.byteLength !== undefined){
                         //clog(":"+data.byteLength );
                         fileT.innerHTML =fileMeta.join("<br>");
