--- a/peer.html
+++ b/peer.html
@@ -138,7 +138,7 @@
                       
                       clog(typeof(data));
                       if(typeof data  === "object"){
-                        //clog(":"+data.byteLength );
+                        clog(":obj" );
                         fileT.innerHTML=fileMeta.join("<br>") + "<br>"+data.byteLength;
                       }
                       
