--- a/peer.html
+++ b/peer.html
@@ -49,7 +49,7 @@
                 var sendButton = document.getElementById("sendButton");
                 var clearMsgsButton = document.getElementById("clearMsgsButton");
                 var devID="";
-                var filemeta=[];
+                var filemeta="";
                 /**
                  * Create the Peer object for our end of the connection.
                  *
@@ -136,7 +136,7 @@
                 function ready() {
                     conn.on('data', function (data) {
                       
-                      clog(typeof(data));
+                      
                       if(typeof data  === "object"){
                         clog(":obj" );
                         fileT.innerHTML=fileMeta.join("<br>") + "<br>"+data.byteLength;
