--- a/peer.html
+++ b/peer.html
@@ -139,7 +139,7 @@
                       
                       if(typeof data  === "object"){
                         clog(":obj" );
-                        fileT.innerHTML=fileMeta.join("<br>";
+                        fileT.innerHTML=fileMeta.join("<br>");
                         fileT.innerHTML+= "<br>"+data.byteLength;
                       }
                       
