--- a/peer.html
+++ b/peer.html
@@ -140,7 +140,7 @@
                       if(typeof data  === "object"){
                         clog(":obj" );
                         fileT.innerHTML=fileMeta.join("<br>");
-                        fileT.innerHTML+= "<br>"+data.byteLength;
+                        fileT.innerHTML+= data.byteLength;
                       }
                       
                       if(data.startsWith("upload·"))  {
