--- a/peer.html
+++ b/peer.html
@@ -19,7 +19,7 @@
         </div>
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="stat" class="status" style="background-color:#f00; color:#fff;">Not Connected</div>
-                <div id="fileT" class="status" style="background-color:#007cb9; color:#fff;">File Transfer</div>
+                <div id="fileT" class="status" style="background-color:#00548d; color:#fff;">File Transfer</div>
                 <div class="message" id="message">Message</div>
 </div>
 <hr>        
