--- a/otaClient.html
+++ b/otaClient.html
@@ -76,8 +76,8 @@ td:last-child{ text-align: right; }
 
 </main>  
 
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/peerjs.min.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="peerjs.min.js"></script>
 </body>
 
 </html>
