--- a/peer.html
+++ b/peer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>YIKAMATİK</title>
+        <title>YIKAMATİK-P</title>
 <style>
     html,body{ color:#fff;font-family:Arial}
   hr{ border-bottom:1px dotted #888 !important;border-top:0px none !important; background-color:none;}
@@ -14,7 +14,7 @@
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
         <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; "><h2 style="display:inline-block;color:#999;">YIKAMATIK</h2>
-          <a style="color:#5f5;padding:1px;display:inline-block;text-decoration:none; font-size:35px; position:absolute; right:60px;font-weight:bold;top:-3px; margin:0 !important;" href="./peer.html">⟳</a>
+          <a style="color:#5f5;padding:1px;display:inline-block;text-decoration:none; font-size:32px; position:absolute; right:60px;font-weight:bold;top:-3px; margin:0 !important;" href="./peer.html">⟳</a>
           <span onClick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#Ff0000;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:1px; font-size:40px; margin:0;" >×</span>
         </div>
         <div id="receiver-id" class="status">Device ID</div>
