--- a/peer.html
+++ b/peer.html
@@ -20,7 +20,7 @@
         <div id="receiver-id" class="status">Device ID</div>
                 <div id="stat" class="status" style="background-color:#f00; color:#fff;">Not Connected</div>
                 <div id="fileT" class="status" style="background-color:#00548d; color:#fff;">File Transfer</div>
-                <div class="message" id="message">Message</div>
+                <div class="message" id="message"></div>
 </div>
 <hr>        
 
