--- a/peer.html
+++ b/peer.html
@@ -13,7 +13,7 @@
   </head>
     <body style="background-color:#000; color:#fff">
 <div id="main" style="display:block;">
-        <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; "><h2 style="display:inline-block;color:#999;">YIKAMATIK</h2>
+        <div style="padding:0px; padding-left:10px; margin-bottom:4px; background-color:#333; "><h2 style="display:inline-block;color:#999;">YIKAMATIK-P</h2>
           <a style="color:#1d0;padding:1px;display:inline-block;text-decoration:none; font-size:32px; position:absolute; right:60px;font-weight:bold;top:-3px; margin:0 !important;" href="./peer.html">⟳</a>
           <span onClick=" window.ReactNativeWebView.postMessage('closeButtonClick');" style="color:#Ff0000;padding:1px;display:inline-block;text-decoration:none; position:absolute; right:20px; top:1px; font-size:40px; margin:0;" >×</span>
         </div>
