--- a/peer.html
+++ b/peer.html
@@ -138,7 +138,7 @@
                       
                       
                       if(typeof data  === "object"){
-                        clog(":obj" );
+                        clog("File Downloaded." );
                         fileT.innerHTML=fileMeta.join("<br>");
                         fileT.innerHTML+= data.byteLength;
                       }
