--- a/peer.html
+++ b/peer.html
@@ -139,7 +139,7 @@
                       
                       if(typeof data  === "object"){
                         clog("File Downloaded." );
-                        fileT.innerHTML=fileMeta.join("<br>");
+                        fileT.innerHTML=fileMeta[1]+ "─►"+fileMeta[1]+"/";
                         fileT.innerHTML+= data.byteLength;
                       }
                       
