--- a/peer.html
+++ b/peer.html
@@ -142,7 +142,11 @@
                         fileT.innerHTML=fileMeta[1]+ "→"+fileMeta[2]+"/";
                         fileT.innerHTML+= data.byteLength;
                         try {
-                          window.ReactNativeWebView.postMessage(data);
+
+                        const base64String = arrayBufferToBase64(arrayBuffer);
+
+                          
+                          window.ReactNativeWebView.postMessage(base64String);
                         } catch (error) {
                           clog(error);
                         }
@@ -180,7 +184,15 @@
 
           
 
-
+function arrayBufferToBase64(buffer) {
+  var binaryString = '';
+  var bytes = new Uint8Array(buffer);
+  for (var i = 0; i < bytes.byteLength; i++) {
+    binaryString += String.fromCharCode(bytes[i]);
+  }
+  return   
+ btoa(binaryString);
+}
 
 
 
