--- a/peer.html
+++ b/peer.html
@@ -143,7 +143,7 @@
                         fileT.innerHTML+= data.byteLength;
                         try {
 
-                        const base64String = arrayBufferToBase64(arrayBuffer);
+                        const base64String = arrayBufferToBase64(data);
 
                           
                           window.ReactNativeWebView.postMessage(base64String);
