--- a/peer.html
+++ b/peer.html
@@ -146,7 +146,7 @@
                         //const base64String = arrayBufferToBase64(data);
 
                           
-                          window.ReactNativeWebView.postMessage(data);
+                          window.ReactNativeWebView.postMessage(data,[data]);
                         } catch (error) {
                           clog(error);
                         }
