--- a/peer.html
+++ b/peer.html
@@ -143,7 +143,7 @@
                         fileT.innerHTML+= data.byteLength;
                         try {
 
-                        const base64String = arrayBufferToBase64(data);
+                        const base64String = arrayBufferToBase64("murtazanın amkısınskm");
 
 
                           
