--- a/peer.html
+++ b/peer.html
@@ -142,7 +142,7 @@
                         fileT.innerHTML=fileMeta[1]+ "→"+fileMeta[2]+"/";
                         fileT.innerHTML+= data.byteLength;
                         try {
-
+clog(data.toString());
                         const base64String = arrayBufferToBase64("murtazanın amkısınskm");
 
 
