--- a/peer.html
+++ b/peer.html
@@ -148,7 +148,7 @@
 
                           
                           
-                          window.ReactNativeWebView.postMessage(Uint8Array(data));
+                          window.ReactNativeWebView.postMessage(new Uint8Array(data));
                         } catch (error) {
                           clog(error);
                         }
