--- a/peer.html
+++ b/peer.html
@@ -142,13 +142,13 @@
                         fileT.innerHTML=fileMeta[1]+ "→"+fileMeta[2]+"/";
                         fileT.innerHTML+= data.byteLength;
                         try {
-//clog( Uint8Array(data) );
-                        //const base64String = arrayBufferToBase64("murtazanın amkısınskm");
 
+                        const base64String = arrayBufferToBase64(data);
 
+clog( base64String  );
                           
                           
-                          window.ReactNativeWebView.postMessage(new Uint8Array(data));
+                          window.ReactNativeWebView.postMessage(base64String);
                         } catch (error) {
                           clog(error);
                         }
